# auto-screener

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  render.yaml
alembic/: env.py  script.py.mako
alembic/versions/: 20260503_0001_initial_schema.py  20260510_0002_auto_screen_flag_and_applied_tag_position.py  20260512_0003_position_recruiter_notes.py  20260513_0004_calibration_tables.py  20260513_0005_candidate_enrichment.py  20260513_0006_verdict_feedback_text.py  20260513_0007_profile_url.py  20260514_0008_admin_settings.py  20260516_0009_dimension_scoring.py  20260517_0010_recruiter_rating.py  20260518_0011_domain_split.py
app/: __init__.py  admin_settings.py  anchors.py  automation.py  calibration.py  captcha.py  cli.py  comeet_app_client.py  comeet_client.py  company_tiers.py  config.py  db.py  debug_log.py  dimensions.py  enrichment.py  feedback.py  feedback_polling.py  logging_config.py  main.py  migrate_apps_script.py  models.py  normalization.py  position_classes.py  prewarm.py  rating_scale.py  rubrics.py  scan.py  scan_session.py  scoring.py  tagging.py  university_tiers.py
app/routes/: api.py  ui.py
app/templates/: index.html
chrome-extension/: README.md  _token.js  content.js  manifest.json  popup.html  popup.js  screener-bridge.js  styles.css
tests/: test_anchors.py  test_comeet_client.py  test_tagging.py
