[project]
name = "auto-screener"
version = "0.1.0"
description = "Comeet candidate auto-screener with Anthropic Claude scoring + recruiter feedback learning. Python port of the Apps Script implementation."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Web server + templates
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "python-multipart>=0.0.12",

    # HTTP / Comeet
    "httpx>=0.27",
    "curl-cffi>=0.7",        # Chrome TLS impersonation for app.comeet.co (Imperva)
    "pyjwt[crypto]>=2.9",    # Comeet public API JWT auth

    # Database
    "psycopg[binary]>=3.2",
    "sqlalchemy>=2.0",
    "alembic>=1.13",

    # Scoring / LLM
    "anthropic>=0.39",
    "tenacity>=9.0",         # retries with backoff

    # Config
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",

    # Misc
    "python-json-logger>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.7",
    "mypy>=1.13",
    "respx>=0.21",           # mock httpx in tests
    "socksio>=1.0",          # required when test envs have a SOCKS proxy var set
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]
ignore = ["E501"]  # line length handled by formatter

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
